refactor classLoader build implementation and create a customWroManager factory